--- a/docker-compose.lite.yml
+++ b/docker-compose.lite.yml
@@ -8,22 +8,10 @@ services:
     environment:
       - NODE_ENV=development
       - JWT_SECRET=${JWT_SECRET:-dev-secret}
-      - DATABASE_URL=${DATABASE_URL:-postgresql://postgres:password@postgres:5432/autostack}
-      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
-    depends_on:
-      - postgres
-      - redis
-    networks:
-      - autostack-network
-
-  user-service:
-    build: ./services/user-management
-    environment:
-      - DATABASE_URL=${DATABASE_URL:-postgresql://postgres:password@postgres:5432/autostack}
-      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
-    depends_on:
-      - postgres
-      - redis
+      - DATABASE_URL=sqlite:///app/data/autostack.db
+      - REDIS_URL=memory://
+    volumes:
+      - sqlite_data:/app/data
     networks:
       - autostack-network
 
@@ -33,10 +21,10 @@ services:
       - "8000:8000"
     environment:
       - AMAZON_Q_API_KEY=${AMAZON_Q_API_KEY}
-      - DATABASE_URL=${DATABASE_URL:-postgresql://postgres:password@postgres:5432/autostack}
+      - DATABASE_URL=sqlite:///app/data/autostack.db
       - CODE_ANALYSIS_SERVICE_URL=http://code-analysis:8000
-    depends_on:
-      - postgres
+    volumes:
+      - sqlite_data:/app/data
     networks:
       - autostack-network
 
@@ -52,47 +40,23 @@ services:
     networks:
       - autostack-network
 
-  postgres:
-    image: postgres:14
-    environment:
-      - POSTGRES_DB=autostack
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5432:5432"
-    networks:
-      - autostack-network
-
-  redis:
-    image: redis:7-alpine
-    volumes:
-      - redis_data:/data
-    ports:
-      - "6379:6379"
-    networks:
-      - autostack-network
-
-volumes:
-  postgres_data:
-  redis_data:
-
   deployment-service:
     build: ./services/deployment
     ports:
       - "8002:8002"
     environment:
-      - DATABASE_URL=${DATABASE_URL:-postgresql://postgres:password@postgres:5432/autostack}
+      - DATABASE_URL=sqlite:///app/data/autostack.db
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - TERRAFORM_STATE_BUCKET=autostack-terraform-state
       - DEPLOYMENT_SERVICE_URL=http://deployment-service:8002
-    depends_on:
-      - postgres
+    volumes:
+      - sqlite_data:/app/data
     networks:
       - autostack-network
+
+volumes:
+  sqlite_data:
 
 networks:
   autostack-network:
